<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_lock_image">Login Lock Image</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="GOOGLE">AIzaSyAAdMS03mAk6qDSf4HUmZmcjvSkiSN7jIU</string>
    <string name="GOOGLE_API">AIzaSyAAdMS03mAk6qDSf4HUmZmcjvSkiSN7jIU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_to">Where to?</string>
    <string name="lets_go">Lets Go</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_request">Permission Request</string>
    <string name="msg_permissions">UClone needs permission to access device location to provide required services. Please allow the permission</string>
    <string name="request">Request</string>
    <string name="register">Register</string>
    <string name="forgot_description_1">Enter the email address  associated with your account.</string>
    <string name="forgot_description_2">We will email you a link to reset  your password.</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
</resources>
