<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_lock_blue_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/forgot_description_1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/forgot_description_2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:id="@+id/email"
                android:drawableLeft="@drawable/ic_email_blue_24dp"
                android:drawableStart="@drawable/ic_email_blue_24dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sendemail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            app:cornerRadius="100dp"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>