<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/step2"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:background="@color/colorPrimary"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:tint="@android:color/white"
                android:contentDescription="@string/login_lock_image"
                android:src="@drawable/signin_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardVew"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="12dp"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:drawableLeft="@drawable/ic_email_blue_24dp"
                        android:drawableStart="@drawable/ic_email_blue_24dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    app:passwordToggleTint="@color/colorPrimary"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="12dp"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/ic_lock_blue_24dp"
                        android:drawableStart="@drawable/ic_lock_blue_24dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textView_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="end"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/layer_layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_layer"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="100dp"
                android:textColor="@color/colorPrimary" />\

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="100dp"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:background="@color/colorPrimary"
        android:id="@+id/step1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In As: "
            android:textSize="26dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/Patient_btn"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:background="@drawable/button_shape"
            android:text="Patient" />

        <Button
            android:id="@+id/Doctor_btn"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/button_shape"
            android:text="Doctor"/>
        <Button
            android:id="@+id/Ambulance_Diver_btn"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/button_shape"
            android:text="Ambulance Diver"/>


    </LinearLayout>

</LinearLayout>